# api/swagger/swagger.yaml
@@ -5,7 +5,7 @@ info:
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
-basePath: /
+basePath: /microfilm-api
 # 
 schemes:
   # tip: remove http to make production-grade
@@ -18,19 +18,19 @@ consumes:
 produces:
   - application/json
 paths:
-  /movie:
+  /microfilms:
     # our controller name
-    x-swagger-router-controller: movie
+    x-swagger-router-controller: microfilm
     get:
       operationId: getAll
-      description: get the movies list
+      description: get the microfilm list
       # define the type of response for Success "200" and Error
       responses:
         "200":
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/GetMoviesListResponse"
+            $ref: "#/definitions/Microfilm"
         # responses may fall through to errors
         default:
           description: Error
@@ -38,15 +38,15 @@ paths:
             $ref: "#/definitions/ErrorResponse"
     post:
       operationId: save
-      description: add a new movie to the list
+      description: add a new roll to the list
       # movie info to be stored
       parameters:
-        - name: title
+        - name: roll_no
           description: Movie properties
           in: body
           required: true
           schema:
-            $ref: "#/definitions/Movie"
+            $ref: "#/definitions/Microfilm"
       responses:
         "200":
           description: Success
@@ -56,104 +56,76 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /movie/{id}:
+  /newspapers:
     # our controller name
-    x-swagger-router-controller: movie
+    x-swagger-router-controller: microfilm
     get:
-      operationId: getOne
-      description: get a movie
+      operationId: getAllNewspapers
+      description: get the newspapers list
       # define the type of response for Success "200" and Error
-      parameters:
-        - name: id
-          type: string
-          in: path
-          required: true
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/GetMovieResponse"
+            # a pointer to a definition
+            $ref: "#/definitions/AllNewspapers"
+        # responses may fall through to errors
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-    put:
-      operationId: update
-      description: update a movie
-      # define the parameters
-      parameters:
-        - name: id
-          description: Movie id
-          type: string
-          in: path
-          required: true
-        - name: title
-          description: Movie properties
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/Movie"
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GeneralResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    delete:
-      operationId: delMovie
-      description: delete a movie
-      # define the parameters
-      parameters:
-        - name: id
-          description: Movie id
-          type: string
-          in: path
-          required: true
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GeneralResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
+
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  GetMoviesListResponse:
+  GetMicrofilmsListResponse:
     required:
-      - movies
+      - microfilms
     properties:
-    # The array of movies
-      movies:
+    # The array of microfilms
+      microfilms:
         type: array
         items:
           type: object
           properties:
-            id:
+            roll_no:
               type: string
-            title:
+            newspaper:
               type: string
-            year:
-              type: number
+            date_start:
+              type: string
+              format: date
+            date_end:
+              type: string
+              format: date
+  AllNewspapers:
+    type: array
+    items:
+      type: string
   
-  Movie:
-    type: object
-    properties:
-      title:
+  Microfilms:
+    type: array
+    items:
+      $ref: "#/definitions/Microfilm"
+  
+  Microfilm:
+     properties:
+      roll_no:
         type: string
         description: task object name
-      year:
-        type: number
+      newspaper:
+        type: string
         description: task description
-    required:
-      - title
-      - year
+      date_start:
+        type: string
+        format: date
+        description: task object name
+      date_end:
+        type: string
+        format: date
+        description: task description        
+
   
   GetMovieResponse:
     required:
@@ -167,7 +139,29 @@ definitions:
         type: string
       year:
         type: number
-  
+        
+  GetRollNoResponse:
+    required:
+      - roll_no
+      - newspaper
+      - date_start
+      - date_end
+    properties:
+      roll_no:
+        type: string
+        description: task object name
+      newspaper:
+        type: string
+        description: task description
+      date_start:
+        type: string
+        format: date
+        description: task object name
+      date_end:
+        type: string
+        format: date
+        description: task description
+
   GeneralResponse:
     type: object
     properties:
